2009-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/Makefile.am:
	* src/core/na-iimporter.c:
	* src/core/na-io-provider.c:
	* src/core/na-iprefs.h: Update core library.

	* src/nact/nact-export-format.h:
	* src/nact/nact-export-format.c:
	* src/core/na-exporter.h:
	* src/core/na-exporter.c: Update export treatements.

	* src/api/na-iexporter.h:
	* src/core/na-iexporter.c:
	* src/io-xml/naxml-module.c:
	* src/io-xml/naxml-provider.c: Update NAIExporter interface.

	Define NAExportFormat new class.

	* src/core/na-export-format.c:
	* src/core/na-export-format.h: New files.

	Rename src/nact/nact-assistant-export-ask.{c,h} to
	src/nact/nact-export-ask.{c,h}

2009-02-15 Pierre Wieser <pwieser@trychlos.org>

	Now install defined ids in docdir.

	* doc/export-format-id: New file.

	* doc/Makefile.am: Updated accordingly.

	Define NactIPrefs interface.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h: New files.

	Update src/nact/
	Remove useless src/private directory.

	Define NAUpdater class.

	* src/core/na-updater.c:
	* src/core/na-updater.h: New files.

	Update src/core/na-pivot.{c,h}
	Update src/core/na-module.{c,h}
	Update src/core/na-iprefs.{c,h}
	Update src/core/na-ipivot-consumer.{c,h}
	Update src/core/na-io-factory.{c,h}
	Update src/core/na-io-provider.{c,h}
	Update src/core/na-iabout.{c,h}
	Update src/utils.

2009-02-15 Deji Akingunola <dakingun@gmail.com>

	* src/test/Makefile.am: Fix typo.

2009-02-15 Pierre Wieser <pwieser@trychlos.org>

	Update src/test.
	Update src/plugin-tracker.
	Update src/plugin-menu.

	Define NAIImporter interface.

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c: New files.

	Define NAIExporter interface.

	* src/api/na-iexporter.h:
	* src/core/na-iexporter.c: New files.

	* src/core/na-dbus-tracker.h: New file.

	Remove useless src/api/na-gconf-keys.h
	Update GConf I/O provider.
	Create src/io-gconf/nagp-keys.c
	Rename src/io-gconf/nagp-write.{c,h} to src/io-gconf/nagp-writer.{c,h}